--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 body{
   color: #561643;
  background-image: url("./components/clouds.jpg");
- background-repeat: no-repeat;
+ background-repeat:repeat-y;
  background-size: cover;
 
 }
@@ -49,4 +49,12 @@ button:hover{
   color: #561643;
   border: 2px solid #561643;
   font-weight: bold;
+}
+.cloud{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+img{
+  width: 60%;
 }
