--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,24 @@ span{
   color: black;
   font-weight: bold;
 }
+
 .card{
   width: 80%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 100px;
   background-color:white;
+  opacity: 0.9;
   border-radius: 30px;
+  animation-name: firstView;
+  animation-duration: 3s;
 }
+@keyframes firstView {
+  0%{opacity: 0.9;}
+  100%{transform: rotateY(360deg);
+  opacity: 1;}
+}
+
 .horizontal{
   display: flex;
   flex-direction: row;
@@ -57,4 +67,44 @@ button:hover{
 }
 img{
   width: 60%;
+}
+:root{
+  --size--circule: 200px;
+  --color--circule: #a8dadc
+}
+.turnRigth{
+  width: var(--size--circule);
+  height: var(--size--circule);
+  animation-name: rotar;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  position: absolute;
+  animation-timing-function: linear;
+  
+}
+
+.turnLeft{
+  width: var(--size--circule);
+  height: var(--size--circule);
+  animation-name: rotar;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: reverse;
+  position: absolute;
+  animation-timing-function: ease;
+
+}
+.circule{
+  width: 20%;
+  height: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  background-color: var(--color--circule);
+  
+}
+
+@keyframes rotar {
+  0%{}
+  100%{transform: rotateZ(360deg);}
 }
